--- a/SoftDev3_Week04_JDBC/.classpath
+++ b/SoftDev3_Week04_JDBC/.classpath
@@ -7,31 +7,17 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/catalina-storeconfig.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/ecj-4.4.2.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/mysql-connector-java-5.1.22-bin.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-jni.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-util-scan.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/tomcat-websocket.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/websocket-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat-8.0.26/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/ecj-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ITS/webservers/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
