--- a/SoftDev3_Week04_DAO/.project
+++ b/SoftDev3_Week04_DAO/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SoftDev3_Week04_DAO</name>
+	<name>SoftDev3_samplecode</name>
 	<comment></comment>
 	<projects>
 	</projects>
